# zabbig

./: .env.example  .gitignore  Dockerfile.client  LICENSE  Makefile  README.md  docker-compose.client.yml  docker-compose.postgres-test.yml  docker-compose.yml
client/: README.md  pyproject.toml  requirements.txt  send_all_python.py  send_all_zabbix_utils.py
client/src/zabbix_sender/: protocol.py
client/tests/: test_cli.py  test_config.py  test_protocol.py  test_sender.py
docs/: adding-metrics.md  architecture.md  client-setup.md  collector-cpu.md  collector-database.md  collector-disk.md  collector-log.md  collector-memory.md  collector-network.md  collector-probe.md  collector-service.md  configuration-client.yaml.md  configuration-metrics.yaml.md  configuration-performance.md  configuration.md  embedded-python.md  encrypt-passwords.md  metric-fields.md  provisioning.md  quickstart.md  running-the-client.md  server-setup.md  testing-pytest.md  testing.md  troubleshooting.md  zabbix-setup.md
postgres-init/: 01_schema.sql  02_data.sql
pytest/: README.md  conftest.py  pytest.ini  setup-pytest-venv.sh  test_batch_chunk_size.py  test_collector_cpu.py  test_collector_database.py  test_collector_disk.py  test_collector_log.py  test_collector_memory.py  test_collector_network.py  test_collector_probe.py  test_collector_registry.py  test_collector_service.py  test_config_loader.py  test_database_integration.py  test_db_conn_cache.py  test_db_loader.py  test_locking.py  test_logging_setup.py  test_metrics_include.py  test_models.py  test_output_flag.py  test_runner.py  (+10 more)
(+89 files in other folders)
